[gd_scene load_steps=4 format=3 uid="uid://cjyyxeylubm6e"]

[ext_resource type="Script" path="res://Weapons/bullet.gd" id="1_5wx55"]

[sub_resource type="CanvasTexture" id="CanvasTexture_uq04i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6xj2"]
size = Vector2(12, 4)

[node name="Bullet" type="Area2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_5wx55")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(116, 0)
scale = Vector2(12, 4)
texture = SubResource("CanvasTexture_uq04i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(116, 0)
shape = SubResource("RectangleShape2D_y6xj2")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
